--- a/Tribun/index.html
+++ b/Tribun/index.html
@@ -40,7 +40,7 @@
             <div class="container">
                 <div class="row">
                     <div class="kiri">
-                        <img src="/img/skin.png" alt="">
+                        <img src="/Tribun/img/skin.png" alt="">
                     </div>
                     <div class="tengah">
                         <div class="atas">
@@ -49,7 +49,7 @@
                                 <p id="text-1"> Waktunya Muda Mudi Dapat Wawasan</p>
                                 <p id="text-3"><span id="text"></span> </p>
                             </div>
-                            <img src="/img/dor.png" alt="">
+                            <img src="/Tribun/img/dor.png" alt="">
                         </div>
                         <div class="baris">
                             <div class="satu">
@@ -86,7 +86,7 @@
                         </div>
                     </div>
                     <div class="kanan">
-                        <img src="/img/skin.png" alt="">
+                        <img src="/Tribun/img/skin.png" alt="">
                     </div>
                 </div>
             </div>
